--- a/上传文件.md
+++ b/上传文件.md
@@ -120,4 +120,164 @@ public class example {
 
 ### :snowflake:带进度条的文件上传 ###
 
+在文件传输中，如果想看到文件上传进度，可以使用ajax和JavaScript完成文件进度显示。只需要在前端界面添加js脚本即可：
+
+```javascript
+<%@ page import="java.util.List" %>
+<%@ page import="java.util.ArrayList" %><%--
+  Created by IntelliJ IDEA.
+  User: Administrator
+  Date: 2019/5/3 0003
+  Time: 19:14
+  To change this template use File | Settings | File Templates.
+--%>
+<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
+<html>
+<head>
+    <title>登录</title>
+</head>
+
+<body>
+
+<form:form commandName="user" action="login" method="post" enctype="multipart/form-data" >
+    <form:errors path="id" /><br>
+    ID :<form:input path="id"/><br>
+
+    <input type="file" id="files" name="files" multiple><br>
+    <output id="selectedFiles"></output><br>
+    <input type="button" id="uploadButton" value="提交"><br>
+
+    <input type="submit" value="上传">
+
+</form:form>
+
+<script>
+    var totalFileLength,totalUpload,fileCount,filesUploaded;
+
+    function debug(s) {
+        var debug = document.getElementById("debug");
+
+        if(debug){
+            debug.innerHTML = debug.innerText + '\n' + s;
+        }
+    }
+
+
+    function  onUploadComplete(e) {
+        totalUpload += document.getElementById("files").files[filesUploaded].size;
+
+        filesUploaded++;
+        debug('完成度：'+filesUploaded+"/"+fileCount);
+
+        debug("文件上传大小："+totalUpload/1000+"K");
+
+        if(filesUploaded<fileCount){
+            uploadNext();
+        }
+        else {
+            var bar = document.getElementById("bar");
+
+            bar.style.width = '100%';
+
+            bar.innerHTML = '完成度：100%';
+            
+        }
+
+    }
+
+    function onFileSelect(e) {
+        var  files = e.target.files;
+
+        var output = [];
+
+        fileCount = files.length;
+
+        totalFileLength = 0;
+
+        for(var i = 0;i< fileCount;i++){
+            var file = files[i];
+            output.push(file.name,'(',file.size,' bytes,',file.lastModifiedDate.toLocaleString(),')');
+
+            output.push("\n");
+
+            debug('上传文件个数：',+file.size);
+
+            totalFileLength += file.size;
+
+            document.getElementById('selectedFiles').innerText = output.join('');
+
+            debug('文件大小:'+totalFileLength/1000 +'K');
+        }
+    }
+
+    function  onUploadProgress(e) {
+        if(e.lengthComputable){
+            var per = parseInt((e.loaded+totalUpload)*100/totalFileLength);
+
+            var bar = document.getElementById('bar');
+
+            bar.style.width = per+'%';
+
+            bar.innerHTML = per+ '% 完成度';
+        }
+        else {
+            debug('unable to comput');
+        }
+    }
+    
+    function onUploadFailed(e) {
+        alert("出现错误");
+    }
+
+    function uploadNext() {
+        var xhr = new XMLHttpRequest();
+
+        var fd = new FormData();
+
+        var file = document.getElementById("files").files[filesUploaded];
+
+        fd.append("multipartFile",file);
+
+        xhr.upload.addEventListener("progress",onUploadProgress,false);
+
+        xhr.addEventListener("load",onUploadComplete,false);
+
+        xhr.addEventListener("error",onUploadFailed,false);
+
+        xhr.open("POST","/login");
+
+        debug('uploading '+file.name);
+
+        xhr.send(fd);
+    }
+
+
+    function  startUpload() {
+        totalUpload = filesUploaded = 0;
+        uploadNext();
+    }
+
+   window.onload = function () {
+        document.getElementById("files").addEventListener('change',onFileSelect,false);
+
+        document.getElementById("uploadButton").addEventListener('click',startUpload,false);
+   }
+</script>
+
+<h1>文件上传进度</h1>
+
+<div id="progressBar" style="height: 20px;border: 2px solid green">
+    <div id="bar" style="height: 100%;background: #33dd33;width: 0%">
+
+    </div>
+</div>
+
+<div id="debug" style="height: 100px;border: 2px solid green;overflow: auto">
+
+</div>
+
+</body>
+</html>
+```
 
