--- a/上传文件.md
+++ b/上传文件.md
@@ -281,3 +281,65 @@ public class example {
 </html>
 ```
 
+该页面的用户界面中主要包含了一个名为progressBar的 div元素、一个表单和另一个名为品bug 的diy元素。也许你已经猜到了，progressBar div是用于展示上传进度的，debug是用于调试信息的。表单中有一个类型为file的input元素和一个按钮。
+
+这个表单中有两点需要注意。第一，是标识为files的input元素，它有一个multiple属性，用于支持多文件选择。第二，这个按钮不是一个提交按钮。因此，单击它并不会提交表单。事实上，脚本是利用XMLHttpRequest对象来完成上传的。
+
+下面来看Javascript代码：
+
+执行脚本时，它做的第一件事就是为这4个变量分配空间：
+
+var totalFilelength，totalUploaded，filecount，filesUploaded；totalFileLength变量保存要上传的文件总长度。totalUploaded是指目前已经上传的字节数。fileCount中包含了要上传的文件数量。filesUploaded表示已经上传的文件数量。随后，当窗口完全下载后，便调用赋予window.onload的函数：
+
+```javascript
+   window.onload = function () {
+        document.getElementById("files").addEventListener('change',onFileSelect,false);
+
+        document.getElementById("uploadButton").addEventListener('click',startUpload,false);
+   }
+```
+
+其中上面一个是监听files变化所触发的onFileSelect函数，下面是点击按钮触发的上传事件。上传使用xml的方法：
+
+```javascript
+    function uploadNext() {
+        var xhr = new XMLHttpRequest();
+        
+        //获取表单数据
+        var fd = new FormData();
+
+        var file = document.getElementById("files").files[filesUploaded];
+        //在数据后面加上文件上传进度
+        fd.append("multipartFile",file);
+
+        xhr.upload.addEventListener("progress",onUploadProgress,false);
+
+        xhr.addEventListener("load",onUploadComplete,false);
+
+        xhr.addEventListener("error",onUploadFailed,false);
+        //使用POST方法发送到服务器
+        xhr.open("POST","/login");
+
+        debug('uploading '+file.name);
+        
+        xhr.send(fd);
+    }
+ ```
+
+这就是主要的上传功能，通过使用XMLHttpRequest对象来获取服务器数据，进而在界面显示。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
