--- a/下载文件.md
+++ b/下载文件.md
@@ -1,1 +1,108 @@
+# :books:下载文件 #
+
+像图片或者HTML文件这样的静态资源，在浏览器中打开正确的URL即可下载。只要该资源是放在应用程序的目录下，或者放在应用程序目录的子目录下，而不是放在WEB-INF下，SerleJSP容器就会将该资源发送到浏览器。然而，有时静态资源是保存在应用程序目录外，或者是保存在某一个数据库中，或者有时需要控制它的访问权限，防止其他网站交叉引用它。如果出现以上任意一种情况，都必须通过编程来发送资源。
+
+简言之，通过编程进行的文件下载，使你可以有选择地将文件发送到浏览器。下面将会介绍如何通过编程发送资源到浏览器，并举两个范例。
+
+### :name_badge:文件下载概览 ###
+
+为了将像文件这样的资源发送到浏览器，需要在控制器中完成以下工作：
+
+> （1）对请求处理方法使用void返回类型，并在方法中添加HttpServletResponse参数。
+
+> （2）将响应的内容类型设为文件的内容类型。Content-Type标题在某个实体的body中定义数据的类型，并包含媒体类型和子类型标识符。如果不清楚内容类型，并且希望浏览器始终显示SavaAs（另存为）对话框，则将它设为APPLICATION/OCTET-STREAM。这个值是不区分大小写的。
+
+> （3）添加一个名为ContentDisposition的HTTP响应标题，并赋值atachment；filename=fileName,这里的fileName它通常与文件品是默认文件名，应该出现在File Download（文件下载）对话框中。
+
+它通常与文件同名，但是也并非一定如此。
+
+例如，以下代码下载不能访问的文件：
+
+通过一个表单验证用户：
+
+```html
+<form action="login" method="get">
+    <label>下载密码</label>
+    <input type="text" placeholder="输入123" name="pw"><br>
+    <input type="submit" value="确认">
+</form>
+```
+
+给用户写入session：
+
+```java
+    @RequestMapping(value = "/login")
+    public  String login(HttpServletRequest request, HttpServletResponse response, HttpSession session){
+        String pw = request.getParameter("pw").trim();
+
+        if(pw.equals("123")){
+            session.setAttribute("user",true);
+
+            return "index";
+        }
+
+        return "login";
+    }
+```
+
+然后就是转入下载界面：
+
+```html
+ <a href="down">下载文件</a>
+```
+
+最后补充down的方法的后台代码：
+
+```java
+ @RequestMapping(value = "down" ,method = RequestMethod.GET)
+    public  String down(Model model, HttpServletRequest request, HttpServletResponse response, HttpSession session){
+        if(session == null || session.getAttribute("user") ==null){
+            return "login";
+        }
+
+        String fileUrl = request.getServletContext().getRealPath("/WEB-INF/hello.txt");
+
+        File file = new File(fileUrl);
+
+        if(file.exists()){
+            response.setContentType("application/txt");
+
+            response.addHeader("Content-Disposition","attachment;filename=hello.txt");
+
+            byte[] buffer = new byte[1024];
+
+            FileInputStream fis = null;
+            BufferedInputStream bis = null;
+
+            try{
+                fis = new FileInputStream(file);
+
+                bis = new BufferedInputStream(fis);
+
+                OutputStream os = response.getOutputStream();
+
+                int i = bis.read(buffer);
+
+                while (i!=-1){
+                    os.write(buffer,0,i);
+
+                    i = bis.read(buffer);
+                }
+            }
+            catch (Exception e){
+                e.printStackTrace();
+            }
+        }
+        return null;
+    }
+```
+
+如前面说过，下载文件需要修改http头部信息。然后再调用读写输出流来完成文件下载。
+
+
+
+
+
+
+
 
