--- a/下载文件.md
+++ b/下载文件.md
@@ -97,7 +97,19 @@
     }
 ```
 
-如前面说过，下载文件需要修改http头部信息。然后再调用读写输出流来完成文件下载。
+如前面说过，下载文件需要修改http头部信息。然后再调用读写输出流来完成文件下载。同样也可以使用这种方式来解决交叉引用问题，只需要加入一个头部http即可：
+
+```java
+    @RequestMapping(value = "/text/{fileName}",method = RequestMethod.GET)
+    public String img(@PathVariable String fileName,@RequestHeader String referer ,Model model){
+        if(referer== null){
+            model.addAttribute("message","您不能直接访问"+fileName);
+            return  "index";
+        }
+        return "login";
+    }
+```
+
 
 
 
